funkcja dodawania postów

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: #fafafa">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
